--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,18 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "sourceMap": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "strict": true,
     "allowJs": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react",
-    "removeComments": true
+    "removeComments": true,
+    "target": "ES5"
   }
 }
