--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
     "D": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.9"
   }
 }
